--- a/index.html
+++ b/index.html
@@ -309,6 +309,12 @@
             </span>
             WhatsApp schreiben
           </a>
+          <a class="hero-cta-link" href="https://www.instagram.com/circle_of_life_jiujitsu" target="_blank" rel="noopener" title="Instagram öffnen">
+            <span class="icon-chip icon-chip--inline" aria-hidden="true">
+              <img src="/assets/icons/instagram.svg" alt="Instagram Icon" title="Instagram Icon">
+            </span>
+            Folge uns auf Instagram
+          </a>
         </div>
       </div>
     </div>
