--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -219,19 +219,19 @@
                 </h1>
                 <p class="lead mb-3">
                   Wir sind die <strong>Brazilian Jiu-Jitsu Kampfsportschule</strong> für Ludwigshafen, Mannheim und den Rhein-Neckar-Raum.
-                  In kleinen Gruppen vermitteln wir <strong>No-Gi Grappling</strong>, funktionale Selbstverteidigung und moderne <strong>Martial Arts</strong>, damit du Technik, Selbstvertrauen und Community findest.
+                  Bei uns lernst du <strong>No-Gi Grappling</strong>, funktionale Selbstverteidigung und moderne <strong>Martial Arts</strong>, damit du Technik, Selbstvertrauen und Community findest.
                 </p>
                 <p class="text-secondary mb-0">
                   Unser Ansatz verbindet strukturierte Lernpfade, respektvolle Mattenkultur und klare Werte:
-                  Wir helfen Einsteiger:innen, Eltern und Athlet:innen, ihre Ziele zu erreichen – sei es Selbstverteidigung, Fitness oder Competition.
+                  Bei uns sind alle willkommen, unabhängig von Alter, Geschlecht oder Fitnesslevel. Kampfsportanfänger und Wettkämpfer finden hier ein geeignetes Training.
                 </p>
               </header>
               <!-- Liste mit Checks -->
               <ul class="list-unstyled about-list mt-3">
-                <li><span class="check" aria-hidden="true"></span>Martial-Arts-Coaching mit klarer Progression für Gi &amp; No-Gi Grappling.</li>
+                <li><span class="check" aria-hidden="true"></span>Martial-Arts-Training mit klaren Fortschritten für Gi &amp; No-Gi Grappling.</li>
                 <li><span class="check" aria-hidden="true"></span>Hygienische Mattenflächen, respektvolle Regeln und eine achtsame Teamkultur.</li>
                 <li><span class="check" aria-hidden="true"></span>Selbstverteidigungs-Drills, die Körpergefühl und Selbstvertrauen stärken.</li>
-                <li><span class="check" aria-hidden="true"></span>Community &amp; Motivation: wir begleiten Anfänger:innen und Wettkämpfer gleichermaßen.</li>
+                <li><span class="check" aria-hidden="true"></span>Community &amp; Motivation: wir begleiten Anfänger und Wettkämpfer gleichermaßen.</li>
               </ul>
               <div class="d-flex flex-wrap gap-2 mt-4 hero-ctas">
                 <a class="btn btn-brand btn-lg" href="/index.html#probetraining" title="Probetraining sichern">Kostenloses Probetraining sichern</a>
@@ -285,12 +285,13 @@
       <!-- WERTE -->
       <section id="werte" class="section-divider" data-aos="fade-up">
         <div class="container">
-          <div class="seo-split">
+          <div class="seo-split mb-4">
             <div class="seo-split__copy">
               <p class="eyebrow">Wofür wir stehen</p>
               <h3 class="seo-title">Kampfsportschule für BJJ in Ludwigshafen-Ruchheim</h3>
-              <p>Vier Leitwerte, die unser Brazilian-Jiu-Jitsu- und No-Gi-Training prägen: Gemeinschaft, Hygiene, Lernkultur und sichere Mattenetikette.</p>
-
+              <p>Du willst Kampfsport lernen und weißt nicht wo? Unser erfahrener Headcoach und unsere starke Community sind hier für dich.</p>
+            </div>
+          </div>
           <div class="row g-4 row-cols-1 row-cols-sm-2 row-cols-lg-4">
             <!-- 1 -->
             <div class="col">
@@ -354,9 +355,9 @@
               <p class="text-dark">So sieht Training bei Circle of Life aus: strukturierte Technikblöcke, kontrolliertes Sparring und eine Community, die gemeinsam wächst. Die Highlights aus Gi, No-Gi und Kids-Training im Überblick.</p>
               <ul class="seo-bullets">
                 <li>Gi Drills für Position, Frames &amp; Submissions</li>
-                <li>No-Gi Entries mit Wrestling Fokus und Leg-Lock Defense</li>
-                <li>Kids &amp; Teens bauen Selbstvertrauen und Body-Awareness auf</li>
-                <li>Coaching mit persönlichem Feedback und klarer Systematik</li>
+                <li>No-Gi Einstiege mit Wrestling Fokus und Leg-Lock Defense</li>
+                <li>Kinder &amp; Jugendliche bauen Selbstvertrauen und Körperbewusstsein auf</li>
+                <li>Kampfsporttraining für Erwachsene mit klarer Systematik und durchdachtem Training</li>
               </ul>
               <p class="mb-0 text-secondary">Scroll durch unsere Galerie oder schau auf Instagram vorbei – dort teilen wir weitere Clips aus dem Training.</p>
             </div>
@@ -426,9 +427,10 @@
             <div class="seo-split__copy">
               <p class="eyebrow">Warum Circle of Life?</p>
               <h2 class="h2 seo-title">Kampfsportschule für Brazilian Jiu-Jitsu &amp; No-Gi</h2>
-              <p class="text-dark">Wir verbinden strukturierte Brazilian-Jiu-Jitsu-Klassen, modernes No-Gi Grappling und praxisnahe Selbstverteidigung für die gesamte Rhein-Neckar-Region. Jede Einheit folgt einem klaren Fahrplan: Warm-up, technische Drills, situatives Sparring und persönliches Feedback – ideal für Fitness, Selbstschutz oder Wettkampfvorbereitung.</p>
+              <p class="text-dark">Wir verbinden strukturierte Brazilian-Jiu-Jitsu-Klassen, modernes No-Gi Grappling und praxisnahe Selbstverteidigung für die gesamte Rhein-Neckar-Region. 
+                Jede Einheit folgt einem klaren Fahrplan: Warm-up, technische Drills, situatives Sparring und persönliches Feedback – ideal für Fitness, Selbstverteidigung oder Wettkampfvorbereitung.</p>
               <ul class="seo-bullets">
-                <li>Gi &amp; No-Gi Klassen von Fundamentals bis Competition-Level</li>
+                <li>Gi &amp; No-Gi Klassen von Grundlagentraining bis Competition-Level</li>
                 <li>Selbstverteidigungs-Drills für Distanzkontrolle, Clinch und Bodenkampf</li>
                 <li>Mindset &amp; Mobility – Stress abbauen, Resilienz aufbauen, verletzungsfrei trainieren</li>
                 <li>Community Fokus: respektvolle Mattenregeln und individuelle Betreuung</li>
@@ -444,9 +446,9 @@
                 <p class="mb-2">Viele Mitglieder kommen aus Ludwigshafen, Mannheim, Bad Dürkheim, Frankenthal oder Speyer. Die Wege sind kurz und das Netzwerk wächst.</p>
                 <h3 class="h5 mb-3 mt-4">Programme im Überblick</h3>
                 <ul class="list-unstyled mb-0">
-                  <li>• Fundamentals &amp; Intermediate für Gi &amp; No-Gi</li>
-                  <li>• Kids BJJ &amp; Teens Self-Defense</li>
-                  <li>• Competition Prep &amp; Open Mat</li>
+                  <li>• Grundlagen- und Fortgeschrittenen-Training für Gi &amp; No-Gi</li>
+                  <li>• Kampfsport und Selbstverteidigung für Kinder und Jugendliche</li>
+                  <li>• Wettkampfvorbereitung &amp; Open Mat</li>
                   <li>• Mobility &amp; Conditioning Sessions</li>
                 </ul>
               </div>
@@ -532,7 +534,7 @@
               <p>Unser Brazilian-Jiu-Jitsu Dojo wird nach jeder Einheit gelüftet und gereinigt. Flip-Flops in der Mattenzone, kurze Nägel und frische Kleidung sind Pflicht, damit alle sicher rollen können.</p>
               <ul class="seo-bullets">
                 <li>Mattenpflege &amp; Lüftung nach jeder Einheit</li>
-                <li>Flip-Flops in der Mattenzone, sauberes Equipment</li>
+                <li>Flip-Flops außerhalb der Mattenzone, sauberes Equipment</li>
                 <li>Frische Kleidung, kurze Nägel, Cuts abkleben</li>
                 <li>Kein Training bei Fieber, Erkältung oder Hautirritationen</li>
               </ul>
@@ -609,7 +611,7 @@
               <p class="eyebrow">Kontakt &amp; Anfahrt</p>
               <h3 class="seo-title h4 mb-2">So erreichst du unsere BJJ Schule</h3>
               <p class="text-dark mb-0">Trainiere Brazilian Jiu-Jitsu &amp; No-Gi in Ludwigshafen-Ruchheim. Sichere dir dein Probetraining oder nimm direkten Kontakt auf – wir sind wenige Minuten von Mannheim, Frankenthal und der BASF entfernt.</p>
-<br>
+            <br>
             <p class="mb-1 d-flex align-items-start">
               <span class="icon-chip" aria-hidden="true">
                 <img src="/assets/icons/standort.svg" alt="Standort Icon" title="Standort Icon">
