Page Speed index. Startseite und ueber uns verbessert

--- a/index.html
+++ b/index.html
@@ -260,11 +260,13 @@
           Circle of Life
         </span>
       </h1>
-      <p class="hero-subline">
-        Kampfsportakademie für BJJ & Grappling zwischen Ludwigshafen, Mannheim und der Rhein-Neckar-Region. <br>
-        Wir bieten Kurse in Gi, No-Gi und Kinder-BJJ.
-        <a href="#kursplan" class="inline-cta" title="Zum Kursplan springen">
-          <br>Hier kannst du unseren <span class="txt">Kursplan ansehen</span> <span class="icon">📅</span></a>
+      <p class="hero-subtitle">
+        Kampfsportakademie für Brazilian Jiu-Jitsu &amp; No-Gi Grappling in Ludwigshafen-Ruchheim.
+        Wir bündeln strukturierte Gi-Kurse, intensive No-Gi Sessions und Kinder-BJJ mit strukturiertem Training und einer starken Community.
+        Bei uns herrscht eine familiäre Atmosphäre und wir sind offen für alle, unabhängig von Alter, Geschlecht oder Fitnesslevel.
+      </p>
+      <p class="small text-secondary mb-0">
+        Kursplan, Preise und Probetraining findest du weiter unten auf dieser Seite.
       </p>
 
       <!-- Primärer CTA (dezent) – linksbündig; auf Mobile automatisch darunter -->
