--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Lerne Circle of Life kennen: unsere Brazilian Jiu-Jitsu & No-Gi Grappling Kampfsportschule in Ludwigshafen vermittelt moderne Martial Arts, Selbstverteidigung und Selbstvertrauen in familiärer Atmosphäre." />
     <meta name="keywords" content="Brazilian Jiu-Jitsu Kampfsportschule Ludwigshafen, No-Gi Grappling Mannheim, Martial Arts Akademie Rhein-Neckar, BJJ Selbstverteidigung, Selbstvertrauen durch Grappling" />
     <link rel="canonical" href="https://circleoflife-bjj.de/ueber-uns.html" />
-    <link rel="preload" href="/assets/images/NoGi_1.jpeg" as="image" type="image/jpeg" fetchpriority="high">
+    <link rel="preload" href="/assets/images/NoGi_1.webp" as="image" type="image/webp" fetchpriority="high">
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website" />
@@ -31,8 +31,10 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </noscript>
     <link href="/css/style.css" rel="stylesheet">
-    <link href="/css/page-kursangebot.css" rel="stylesheet"><!-- dein Kursangebot-Theme -->
-    <link href="/css/subpage.css" rel="stylesheet"><!-- schlankes Add-on -->
+    <link rel="preload" href="/css/page-kursangebot.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><!-- dein Kursangebot-Theme -->
+    <noscript><link rel="stylesheet" href="/css/page-kursangebot.css"></noscript>
+    <link rel="preload" href="/css/subpage.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><!-- schlankes Add-on -->
+    <noscript><link rel="stylesheet" href="/css/subpage.css"></noscript>
 
     <!-- AOS -->
     <link rel="preload" href="https://unpkg.com/aos@2.3.4/dist/aos.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -244,7 +246,7 @@
       </section>
 
       <!-- CTA Strip -->
-      <section class="cta-strip" aria-label="Direkte Kontaktmöglichkeiten">
+      <section class="cta-strip cv-section cv-section--compact" aria-label="Direkte Kontaktmöglichkeiten">
         <div class="container">
           <div class="cta-strip__inner">
             <div class="cta-strip__copy">
@@ -283,7 +285,7 @@
       </section>
 
       <!-- WERTE -->
-      <section id="werte" class="section-divider" data-aos="fade-up">
+      <section id="werte" class="section-divider cv-section" data-aos="fade-up">
         <div class="container">
           <div class="seo-split mb-4">
             <div class="seo-split__copy">
@@ -346,7 +348,7 @@
       </section>
 
       <!-- GALERIE -->
-      <section id="galerie" class="section-divider" data-aos="fade-up">
+      <section id="galerie" class="section-divider cv-section" data-aos="fade-up">
         <div class="container">
           <div class="seo-split gallery-split">
             <div class="seo-split__copy">
@@ -421,7 +423,7 @@
 
 
       <!-- SEO Content Block -->
-      <section id="bjj-selbstvertrauen" class="section-divider" data-aos="fade-up">
+      <section id="bjj-selbstvertrauen" class="section-divider cv-section" data-aos="fade-up">
         <div class="container">
           <div class="seo-split">
             <div class="seo-split__copy">
@@ -474,7 +476,7 @@
         </div>
       </section>
 
-      <section class="cta-panel my-4" data-aos="fade-up">
+      <section class="cta-panel my-4 cv-section cv-section--compact" data-aos="fade-up">
         <div class="container">
           <div class="cta-panel__inner">
             <div>
@@ -525,7 +527,7 @@
       -->
 
       <!-- DOJO & HYGIENE -->
-      <section id="dojo" class="section-divider" data-aos="fade-up">
+      <section id="dojo" class="section-divider cv-section" data-aos="fade-up">
         <div class="container">
           <div class="seo-split">
             <div class="seo-split__copy">
@@ -579,7 +581,7 @@
       </section>
       -->
 
-      <section id="instagram" class="section-divider" aria-label="Aktuelle Neuigkeiten">
+      <section id="instagram" class="section-divider cv-section" aria-label="Aktuelle Neuigkeiten">
         <div class="container">
           <div class="instagram-follow">
             <div class="instagram-follow__copy">
@@ -604,7 +606,7 @@
       </section>
 
       <!-- Kontakt-Karte -->
-      <section class="section-devider section-divider" id="kontakt">
+      <section class="section-devider section-divider cv-section" id="kontakt">
         <div class="container">
           <div class="bg-white border rounded-4 p-4 h-100 d-flex flex-column" data-aos="fade-up" data-aos-delay="200">
 
@@ -660,7 +662,7 @@
       </section>
 
       <!-- FAQ -->
-      <section id="faq" class="section-divider" data-aos="fade-up">
+      <section id="faq" class="section-divider cv-section" data-aos="fade-up">
         <div class="container">
           <header class="section-head">
             <h2 class="section-title h4">Häufige Fragen zu BJJ &amp; unserer Kampfsportschule</h2>
@@ -771,9 +773,22 @@
       </section>
 
       <!-- Abschluss-CTA -->
-      <section class="text-center py-4" data-aos="fade-up">
+      <section class="cta-panel" id="cta-panel">
         <div class="container">
-          <a href="/index.html#probetraining" class="btn btn-brand btn-lg" title="Kostenloses Probetraining buchen">Kostenloses Probetraining buchen</a>
+          <div class="cta-panel__inner">
+            <div>
+              <p class="text-uppercase small fw-semibold text-warning mb-1">Bereit für die Matte?</p>
+              <h2 class="mb-3">Jetzt kostenloses Probetraining reservieren</h2>
+              <p class="mb-0">
+                Egal ob aus Ludwigshafen, Mannheim oder der Vorderpfalz – du bist willkommen. Wir begleiten Einsteiger,
+                ambitionierte Athleten und Kids gleichermaßen.
+              </p>
+            </div>
+            <div class="cta-panel__actions">
+              <a class="btn btn-brand btn-lg" href="#probetraining" title="Probetraining sichern">Probetraining sichern</a>
+              <a class="btn btn-outline-light btn-lg" href="tel:+4917661990534" title="0176 61990534 wählen">0176&nbsp;61990534 anrufen</a>
+            </div>
+          </div>
         </div>
       </section>
 
