Speedindex und Barrierefreiheit verbessert

--- a/bjj.html
+++ b/bjj.html
@@ -554,12 +554,12 @@
     <div class="container">
       <div class="row text-center text-md-start gy-2">
         <div class="col-md-4">
-          <h6 class="fw-bold mb-2">Circle of Life Jiu-Jitsu</h6>
+          <p class="fw-bold mb-2 mb-md-1">Circle of Life Jiu-Jitsu</h6>
           <p class="mb-0">Inhaber Marvin Beck</p>
           <p class="mb-0">Dürkheimer Str. 56,<br> 67071 Ludwigshafen am Rhein</p>
         </div>
         <div class="col-md-4">
-          <h6 class="fw-bold mb-2">Rechtliches</h6>
+          <p class="fw-bold mb-2 mb-md-1">Rechtliches</h6>
           <p class="mb-1"><a href="/impressum.html" class="footer-link">Impressum</a></p>
           <p class="mb-1"><a href="/datenschutz.html" class="footer-link">Datenschutz</a></p>
           <p class="small mb-0">© <span id="jahr"></span> – Alle Rechte vorbehalten.</p>
