--- a/kursangebot.html
+++ b/kursangebot.html
@@ -774,7 +774,7 @@
       <div class="row text-center text-md-start gy-2">
         <!-- Firma -->
         <div class="col-md-4">
-          <h6 class="fw-bold mb-2">Circle of Life Jiu-Jitsu</h6>
+          <p class="fw-bold mb-2 mb-md-1">Circle of Life Jiu-Jitsu</h6>
           <p class="mb-0">Inhaber Marvin Beck</p>
           <p class="mb-0">Dürkheimer Str. 56,<br> 67071 Ludwigshafen am Rhein</p>
         </div>
@@ -784,7 +784,7 @@
 
         <!-- Rechtliches -->
         <div class="col-md-4">
-          <h6 class="fw-bold mb-2">Rechtliches</h6>
+          <p class="fw-bold mb-2 mb-md-1">Rechtliches</h6>
           <p class="mb-1">
             <a href="impressum.html" class="footer-link">Impressum</a>
           </p>
