--- a/index.html
+++ b/index.html
@@ -261,9 +261,8 @@
         </span>
       </h1>
       <p class="hero-subtitle">
-        Kampfsportakademie für Brazilian Jiu-Jitsu &amp; No-Gi Grappling in Ludwigshafen-Ruchheim.
-        Wir bündeln strukturierte Gi-Kurse, intensive No-Gi Sessions und Kinder-BJJ mit strukturiertem Training und einer starken Community.
-        Bei uns herrscht eine familiäre Atmosphäre und wir sind offen für alle, unabhängig von Alter, Geschlecht oder Fitnesslevel.
+        Kampfsportakademie für Brazilian Jiu-Jitsu &amp; No-Gi in Ludwigshafen-Ruchheim – strukturierte Kurse, klare Lernpfade, starke Community.
+        Familiäre Atmosphäre, moderne Selbstverteidigung und Kampfsporttraining für Anfänger, Kids und Wettkämpfer gleichermaßen.
       </p>
       <p class="small text-secondary mb-0">
         Kursplan, Preise und Probetraining findest du weiter unten auf dieser Seite.
@@ -283,7 +282,7 @@
     </div>
   </section>
 
-  <section class="cta-strip" aria-label="Direkte Kontaktmöglichkeiten">
+  <section class="cta-strip cv-section cv-section--compact" aria-label="Direkte Kontaktmöglichkeiten">
     <div class="container">
       <div class="cta-strip__inner">
         <div class="cta-strip__copy">
@@ -323,7 +322,7 @@
   </section>
 
   <!-- # KURSANGEBOT-->
-  <section id="kursangebot" class="py-5 section-divider" style="position:relative;">
+  <section id="kursangebot" class="py-5 section-divider cv-section" style="position:relative;">
     <div class="container">
 
       <header class="section-head" data-aos="fade-up">
@@ -400,7 +399,7 @@
   </section>
 
 
-  <section id="kursplan" class="kursplan-section">
+  <section id="kursplan" class="kursplan-section cv-section">
     <div class="container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Kursplan und Einstieg</h2>
@@ -481,7 +480,7 @@
 
 
   <!-- PREISE -->
-  <section id="preise" class="py-5 section-divider">
+  <section id="preise" class="py-5 section-divider cv-section">
     <div class="container price-cards-container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Unsere Preisliste</h2>
@@ -586,7 +585,7 @@
 
 
   <!-- # JOIN THE CIRCLE OF LIFE -->
-  <section id="einstieg" class="py-5 section-divider" style="position:relative;">
+  <section id="einstieg" class="py-5 section-divider cv-section" style="position:relative;">
     <div class="container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Be a part of the Circle</h2>
@@ -654,7 +653,7 @@
 
 
 
-  <section class="py-4" style="background:linear-gradient(90deg,var(--gold),var(--gold-2)); color:var(--brand)">
+  <section class="py-4 cv-section cv-section--compact" style="background:linear-gradient(90deg,var(--gold),var(--gold-2)); color:var(--brand)">
     <div class="container">
       <div class="row row-cols-2 row-cols-md-4 text-center g-4">
         <div class="col" data-aos="zoom-in">
@@ -677,7 +676,7 @@
     </div>
   </section>
 
-  <section id="standort" class="py-5 section-muted section-divider">
+  <section id="standort" class="py-5 section-muted section-divider cv-section">
     <div class="container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Brazilian Jiu-Jitsu für Ludwigshafen & die Rhein-Neckar-Region</h2>
@@ -786,7 +785,7 @@
 
 
   <!-- COACHES -->
-  <section id="trainer" class="py-5 section-muted section-divider" style="position:relative;">
+  <section id="trainer" class="py-5 section-muted section-divider cv-section" style="position:relative;">
     <div class="container">
       <!-- Überschrift -->
       <header class="section-head" data-aos="fade-up">
@@ -817,7 +816,7 @@
 
 
   <!-- probetraining / KONTAKT -->
-  <section id="probetraining" class="py-5 section-muted section-divider" style="position:relative;">
+  <section id="probetraining" class="py-5 section-muted section-divider cv-section" style="position:relative;">
     <div class="container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Kostenloses Probetraining</h2>
@@ -951,7 +950,7 @@
   </section>
 
   <!-- FAQ Section -->
-  <section id="faq" class="py-5 section-divider" style="position:relative;">
+  <section id="faq" class="py-5 section-divider cv-section" style="position:relative;">
     <div class="container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Häufige Fragen (FAQ)</h2>
@@ -1028,7 +1027,7 @@
     </div>
   </section>
 
-  <section class="cta-panel" id="cta-panel">
+  <section class="cta-panel cv-section cv-section--compact" id="cta-panel">
     <div class="container">
       <div class="cta-panel__inner">
         <div>
