Startseite verschlankt und stärkerer cta button

--- a/index.html
+++ b/index.html
@@ -260,23 +260,29 @@
           Circle of Life
         </span>
       </h1>
-      <p class="hero-subtitle">
+      <p class="hero-subtitle hero-subtitle--desktop">
         Kampfsportakademie für Brazilian Jiu-Jitsu &amp; No-Gi in Ludwigshafen-Ruchheim – strukturierte Kurse, klare Lernpfade, starke Community.
         Familiäre Atmosphäre, moderne Selbstverteidigung und Kampfsporttraining für Anfänger, Kids und Wettkämpfer gleichermaßen.
       </p>
-      <p class="small text-secondary mb-0">
+      <p class="hero-subtitle hero-subtitle--mobile">
+        BJJ &amp; No-Gi in Ludwigshafen: sichere Lernpfade, familiäre Atmosphäre, moderne Selbstverteidigung – für Einsteiger, Kids und Wettkämpfer.
+      </p>
+      <p class="hero-note small text-secondary mb-0">
         Kursplan, Preise und Probetraining findest du weiter unten auf dieser Seite.
       </p>
 
-      <!-- Primärer CTA (dezent) – linksbündig; auf Mobile automatisch darunter -->
-      <div class="hero-ctas">
-        <a class="btn btn-brand btn-lg btn-quiet hero-btn" href="#probetraining" title="Kostenloses Probetraining sichern">Kostenloses Probetraining sichern</a>
-      </div>
       <!-- Hero-Bildblock -->
       <div class="hero-image-block">
         <div class="hero-image-frame">
           <img id="hero-visual-img" src="/assets/images/JJPro_League.webp" alt="BJJ Visual" title="BJJ Visual" class="hero-image" loading="eager" decoding="async" fetchpriority="high">
         </div>
+      </div>
+
+      <!-- Primärer CTA -->
+      <div class="hero-ctas">
+        <a class="btn btn-lg hero-btn hero-btn--highlight" href="#probetraining" title="Kostenloses Probetraining sichern">
+          Kostenloses Probetraining sichern
+        </a>
       </div>
 
     </div>
