Bahn und Bus Verbindung war falsch ist nun gefixt.

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                 <span class="icon-chip icon-chip--inline" aria-hidden="true">
                   <img src="/assets/icons/standort.svg" alt="Standort Icon" title="Standort Icon">
                 </span>
-                10&nbsp;Min. aus Mannheim Zentrum
+                15&nbsp;Min. aus Mannheim Zentrum
               </li>
               <li class="d-flex align-items-center gap-2">
                 <span class="icon-chip icon-chip--inline" aria-hidden="true">
@@ -742,8 +742,11 @@
             <h3>Schnell vor Ort</h3>
             <dl class="row mb-0">
               <dt class="col-sm-4">ÖPNV</dt>
-              <dd class="col-sm-8 mb-2">Straßenbahnlinie 4 Richtung Oggersheim, Ausstieg &bdquo;Hans-Warsch-Platz&ldquo;,
-                danach 5&nbsp;Minuten zu Fuß.</dd>
+              <dd class="col-sm-8 mb-2">
+                <strong>Bahn:</strong> Straßenbahnlinie&nbsp;4 Richtung Bad Dürkheim bis Haltestelle &bdquo;Ruchheim Bahnhof&ldquo;, anschließend
+                ca. 5&nbsp;Minuten Fußweg.<br>
+                <strong>Bus:</strong> Buslinie&nbsp;72 Richtung Ruchheim, Ausstieg an der Haltestelle &bdquo;Am Herrschaftsweiher&ldquo; – du bist direkt vor dem Dojo.
+              </dd>
               <dt class="col-sm-4">Parken</dt>
               <dd class="col-sm-8 mb-2">Kostenlos direkt vor dem Gebäude oder gegenüber auf der Insel.</dd>
               <dt class="col-sm-4">Adresse</dt>
